ver 0.24 (not yet released)
* protocol
  - "playlistfind"/"playlistsearch" have "sort" and "window" parameters
* player
  - add option "mixramp_analyzer" to scan MixRamp tags on-the-fly
* tags
  - new tag "Mood"

ver 0.23.6 (not yet released)
* decoder
  - opus: fix "readpicture" on Opus files

ver 0.23.5 (2021/12/01)
* protocol
  - support relative offsets for "searchadd"
  - fix "searchaddpl" bug (bogus error "Bad position")
* database
  - upnp: fix crash bug
* tags
  - fix MixRamp support
* migrate to PCRE2
* GCC 12 build fixes

ver 0.23.4 (2021/11/11)
* protocol
  - add optional position parameter to "searchaddpl"
* decoder
  - ffmpeg: support libavcodec 59
* output
  - alsa: add option "thesycon_dsd_workaround" to work around device bug
* fix crash on debug builds if startup fails
* systemd
  - remove "RuntimeDirectory" directive because it caused problems
  - ignore the "pid_file" setting if started as systemd service
* Windows
  - enable the "openmpt" decoder plugin

ver 0.23.3 (2021/10/31)
* protocol
  - add optional position parameter to "add" and "playlistadd"
  - allow range in "playlistdelete"
* database
  - fix scanning files with question mark in the name
  - inotify: fix use-after-free bug
* output
  - alsa: add option "stop_dsd_silence" to work around DSD DAC noise
* macOS: fix libfmt related build failure
* systemd: add "RuntimeDirectory" directive

ver 0.23.2 (2021/10/22)
* protocol
  - fix "albumart" timeout bug
* input
  - nfs: fix playback bug
* output
  - pipewire: send artist and title to PipeWire
  - pipewire: DSD support
* neighbor
  - mention failed plugin name in error message
* player
  - fix cross-fade regression
* fix crash with libfmt versions older than 7

ver 0.23.1 (2021/10/19)
* protocol
  - use decimal notation instead of scientific notation
  - "load" supports relative positions
* output
  - emit "mixer" idle event when replay gain changes volume
  - pipewire: emit "mixer" idle events on external volume change