@@ -7,6 +7,7 @@ song = static_library(
   'BaseSongFilter.cxx',
   'TagSongFilter.cxx',
   'ModifiedSinceSongFilter.cxx',
+  'PrioritySongFilter.cxx',
   'AudioFormatSongFilter.cxx',
   'AndSongFilter.cxx',
   'OptimizeFilter.cxx',
@@ -15,6 +16,7 @@ song = static_library(
   include_directories: inc,
   dependencies: [
     pcre_dep,
+    fmt_dep,
   ],
 )
 
